--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,31 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Check secrets availability
+        run: |
+          echo "Checking secrets..."
+          if [ -z "${{ secrets.CLOUDFLARE_API_TOKEN }}" ]; then
+            echo "❌ CLOUDFLARE_API_TOKEN is not set"
+          else
+            echo "✅ CLOUDFLARE_API_TOKEN is set"
+          fi
+          if [ -z "${{ secrets.CLOUDFLARE_ACCOUNT_ID }}" ]; then
+            echo "❌ CLOUDFLARE_ACCOUNT_ID is not set"
+          else
+            echo "✅ CLOUDFLARE_ACCOUNT_ID is set"
+          fi
+          if [ -z "${{ secrets.ADMIN_PASSWORD }}" ]; then
+            echo "❌ ADMIN_PASSWORD is not set"
+          else
+            echo "✅ ADMIN_PASSWORD is set"
+          fi
+
       - name: Deploy to Cloudflare Workers
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: deploy --verbose
         env:
           ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
 
