--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
 name = "masa86-blog"
 main = "src/index.ts"
 compatibility_date = "2025-04-01"
+node_compat = true
 
 [assets]
 directory = "./web/public"
