fix: Use nodejs_compat compatibility flag instead of deprecated node_compat

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,7 @@
 name = "masa86-blog"
 main = "src/index.ts"
 compatibility_date = "2025-04-01"
-node_compat = true
+compatibility_flags = ["nodejs_compat"]
 
 [assets]
 directory = "./web/public"
