debug: Add dependency check and build configuration

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,13 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          echo "📦 Installing dependencies..."
+          npm ci
+          echo "✅ Dependencies installed"
+          echo "📋 Checking marked package..."
+          ls -la node_modules/marked/ || echo "❌ marked not found!"
+          npm list marked || echo "⚠️ marked not in npm list"
 
       - name: Check secrets availability
         run: |
